# krossock

./: ChangeLog  Makefile.am  README.md  aclocal.m4  config.h.in  configure  configure.ac
src/: Makefile.am  extras.c  includes.h  krossock.c  krossock.h  krossock_ssl.c  krossock_ssl.h  methods.c
tests/: Makefile.am  test1.c
